--- a/index.html
+++ b/index.html
@@ -2,9 +2,38 @@
 <html lang="en">
 <head>
 	<title>Kevin's Portfolio</title>
+	<style>
+		.cent {
+			display:block;
+			margin: 0px auto;
+		}
+
+	</style>
+	
+	
+	
 </head>
 
 <body>
+	
+	<div style="display:flex; flex-direction:row; border:solid;">
+		<div style="width:60%;">
+			<img src="rubber-soul.png" class="cent" width="400">
+		</div>
+		<div style="background-color:lightblue; margin-left:auto; margin-right:0px;">
+			<h2>Updates</h2>
+		</div>
+	
+	</div>
+	
+	
+	
+	
+	
+	
+	
+	
+	
 	<h1>Kevin's Portfolio</h1>
 	<!-- Table to structure web page -->
 	<table>
